--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>body{margin:0;padding:0;background-color:var(--Paper);direction:rtl}:root{--Paper: #FBF6F0;--Gold: #C09C3F;--Blue: #072D5F;--Brown: #66473A;--Purple: #490928;--BottleGreen: #3A6651;scrollbar-width:none;-ms-overflow-style:none}
-</style><link rel="stylesheet" href="styles-ZJ76P7RP.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-ZJ76P7RP.css"></noscript></head>
+<style>:root{--Paper: #FBF6F0;--Gold: #C09C3F;--Blue: #072D5F;--Brown: #66473A;--Purple: #490928;--BottleGreen: #3A6651}body{margin:0;padding:0;background-color:var(--Paper);direction:rtl}:root{scrollbar-width:none;-ms-overflow-style:none}
+</style><link rel="stylesheet" href="styles-LMJDZUZI.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-LMJDZUZI.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-S3BTP7ME.js" type="module"></script><script src="main-WWJEPRF3.js" type="module"></script></body>
+<script src="polyfills-S3BTP7ME.js" type="module"></script><script src="main-4SZBZZLP.js" type="module"></script></body>
 </html>
