--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>:root{--Paper: #FBF6F0;--Gold: #C09C3F;--Blue: #072D5F;--Brown: #66473A;--Purple: #490928;--BottleGreen: #3A6651}body{margin:0;padding:0;background-color:var(--Paper);direction:rtl}:root{scrollbar-width:none;-ms-overflow-style:none}
-</style><link rel="stylesheet" href="styles-LMJDZUZI.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-LMJDZUZI.css"></noscript></head>
+</style><link rel="stylesheet" href="app/styles-LMJDZUZI.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="app/styles-LMJDZUZI.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-S3BTP7ME.js" type="module"></script><script src="main-4SZBZZLP.js" type="module"></script></body>
+<script src="app/polyfills-S3BTP7ME.js" type="module"></script><script src="app/main-4SZBZZLP.js" type="module"></script></body>
 </html>
